# pixel-eat-api

./: .env.example  Makefile  README.md  main.py  mise.toml  pyproject.toml  requirements.txt
.claude/: settings.json
.github/workflows/: build.yml
app/: config.py  dependencies.py  main.py
app/schemas/: post.py
app/services/: badge_service.py  notification_service.py  post_service.py  storage_service.py
app/views/: badges.py  ingredients.py  posts.py  users.py
src/: config.py  database.py  dependencies.py  main.py  mock_data.py
src/schemas/: badge.py  ingredient.py  post.py  user.py
src/services/: badge_service.py  notification_service.py  post_service.py  storage_service.py  vision_service.py
src/views/: badges.py  diary.py  events.py  feed.py  friends_mock.py  ingredients.py  posts.py  profile.py  profile_mock.py  recipes.py  recipes_mock.py  users.py
