[project]
name = "pixel-eat-api"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "fastapi>=0.135.2",
    "python-jose>=3.3.0",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.13.1",
    "supabase>=2.28.3",
    "uvicorn>=0.42.0",
    "python-multipart>=0.0.22",
]

[dependency-groups]
dev = [
    "ruff>=0.15.8",
    "ty>=0.0.35",
]

[tool.ty.environment]
extra-paths = ["src"]
